--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,22 @@
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('../../lib/fonts/fontawesome-webfont.eot');
+  src: url('../../lib/fonts/fontawesome-webfont.eot') format('embedded-opentype'),
+  url('../../lib/fonts/fontawesome-webfont.woff') format('woff'),
+  url('../../lib/fonts/fontawesome-webfont.ttf') format('truetype'),
+  url('../../lib/fonts/fontawesome-webfont.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 .devgib-score-icon {
+
+  font-family: FontAwesome;
+  font-style:  normal;
+  font-weight: normal;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
 
   &.score-1  { color: #ff0300; }
   &.score-2  { color: #e65401; }
