--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,22 +1,9 @@
-@font-face {
-  $fa-font-path: 'chrome-extension://__MSG_@@extension_id__/assets/fonts';
-
-  font-family: 'FontAwesome';
-  src: url('#{$fa-font-path}/fontawesome-webfont.eot');
-  src: url('#{$fa-font-path}/fontawesome-webfont.eot') format('embedded-opentype'),
-  url('#{$fa-font-path}/fontawesome-webfont.woff') format('woff'),
-  url('#{$fa-font-path}/fontawesome-webfont.ttf') format('truetype'),
-  url('#{$fa-font-path}/fontawesome-webfont.svg') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
+@import 'fonts';
 
 .devgib-score-icon {
 
   font-family: 'FontAwesome';
-  font-style:  normal;
   font-weight: normal;
-  line-height: 1;
   -webkit-font-smoothing: antialiased;
 
   &.score-1  { color: #ff0300; }
