--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -14,7 +14,7 @@
   &.score-6  { color: #acda10; }
   &.score-7  { color: #68c130; }
   &.score-8  { color: #57e826; }
-  &.score-9  { color: #11ff98; }
-  &.score-10 { color: #38a8f4; }
+  &.score-9  { color: #3595ff; }
+  &.score-10 { color: #145bc1; }
 
 }
