--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,11 +7,13 @@
 
   font-family: 'FontAwesome';
   font-weight: normal;
+  display: inline-block;
   -webkit-font-smoothing: antialiased;
+
 
   &.spinner {
     color: $without-score-color;
-    -webkit-animation: spin 2s infinite linear;
+    -webkit-animation: spin 1s infinite linear;
   }
 
   &.error {
