--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -28,6 +28,6 @@
   &.devgib-score-6  { color: #acda10; }
   &.devgib-score-7  { color: #68c130; }
   &.devgib-score-8  { color: #57e826; }
-  &.devgib-score-9  { color: #3595ff; }
-  &.devgib-score-10 { color: #145bc1; }
+  &.devgib-score-9  { color: #4e73ff; }
+  &.devgib-score-10 { color: #61479d; }
 }
