Improved api of abstract site

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -24,14 +24,14 @@
     color: $without-score-color;
   }
 
-  &.devgib-score-1  { color: #9a0200; }
-  &.devgib-score-2  { color: #af460a; }
-  &.devgib-score-3  { color: #a78400; }
-  &.devgib-score-4  { color: #c6b600; }
-  &.devgib-score-5  { color: #d9dd06; }
-  &.devgib-score-6  { color: #acda10; }
-  &.devgib-score-7  { color: #68c130; }
-  &.devgib-score-8  { color: #57e826; }
-  &.devgib-score-9  { color: #4e73ff; }
-  &.devgib-score-10 { color: #61479d; }
+  &.devgib-score-1  { color: #560005; }
+  &.devgib-score-2  { color: #6f0012; }
+  &.devgib-score-3  { color: #a70900; }
+  &.devgib-score-4  { color: #a33600; }
+  &.devgib-score-5  { color: #dd5f00; }
+  &.devgib-score-6  { color: #daa400; }
+  &.devgib-score-7  { color: #c1bb00; }
+  &.devgib-score-8  { color: #b6e80f; }
+  &.devgib-score-9  { color: #5eba1f; }
+  &.devgib-score-10 { color: #197d12; }
 }
