--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -24,14 +24,15 @@
     color: $without-score-color;
   }
 
-  &.devgib-score-1  { color: #560005; }
-  &.devgib-score-2  { color: #6f0012; }
-  &.devgib-score-3  { color: #a70900; }
-  &.devgib-score-4  { color: #a33600; }
-  &.devgib-score-5  { color: #dd5f00; }
+  &.devgib-score-0  { color: #520005; }
+  &.devgib-score-1  { color: #720007; }
+  &.devgib-score-2  { color: #980019; }
+  &.devgib-score-3  { color: #b51f04; }
+  &.devgib-score-4  { color: #bc3d01; }
+  &.devgib-score-5  { color: #cd6e00; }
   &.devgib-score-6  { color: #daa400; }
   &.devgib-score-7  { color: #c1bb00; }
   &.devgib-score-8  { color: #b6e80f; }
-  &.devgib-score-9  { color: #5eba1f; }
-  &.devgib-score-10 { color: #197d12; }
+  &.devgib-score-9  { color: #6cba1e; }
+  &.devgib-score-10 { color: #1e9415; }
 }
