--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -30,9 +30,9 @@
   &.devgib-score-3  { color: #b51f04; }
   &.devgib-score-4  { color: #bc3d01; }
   &.devgib-score-5  { color: #cd6e00; }
-  &.devgib-score-6  { color: #daa400; }
-  &.devgib-score-7  { color: #c1bb00; }
-  &.devgib-score-8  { color: #b6e80f; }
-  &.devgib-score-9  { color: #6cba1e; }
-  &.devgib-score-10 { color: #1e9415; }
+  &.devgib-score-6  { color: #c19100; }
+  &.devgib-score-7  { color: #a59f00; }
+  &.devgib-score-8  { color: #82a50b; }
+  &.devgib-score-9  { color: #549319; }
+  &.devgib-score-10 { color: #1d8215; }
 }
