Building only index.css

--- a/src/haml/background/popup.haml
+++ b/src/haml/background/popup.haml
@@ -1,1 +1,4 @@
-.hey test!
+%link{:rel => :stylesheet, :type => 'text/css', :href => '/build/css/background/index.css'}
+
+.github= '&#xf113;'
+.github= 'hello'
