Added popup javascript

--- a/src/haml/background/popup.haml
+++ b/src/haml/background/popup.haml
@@ -1,11 +1,12 @@
 %link{:rel => :stylesheet, :type => 'text/css', :href => '/build/css/background/index.css'}
+%script{:type => 'text/javascript', :src => '/build/js/background/popup.js'}
 
 #logo
   %img{:src => '/assets/icons/icon48.png'}
   %span.title= 'DevGib'
 
 #sites
-  
+
   .site
     %span.icon= '&#xf113;'
     %input.enabled{:type => :checkbox, :id => 'site1'}
